--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # database configs
-spring.datasource.url=jdbc:mysql://root:0CWydGwIjA3JI0RrqHjo@containers-us-west-192.railway.app:6626/railway
+spring.datasource.url=jdbc:mysql://root:5tX2IktBROAuFPjc7wvW@containers-us-west-90.railway.app:6982/railway
 spring.datasource.username=root
-spring.datasource.password=0CWydGwIjA3JI0RrqHjo
+spring.datasource.password=5tX2IktBROAuFPjc7wvW
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
