--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # database configs
-spring.datasource.url=jdbc:mysql://root:5tX2IktBROAuFPjc7wvW@containers-us-west-90.railway.app:6982/railway
+spring.datasource.url=jdbc:mysql://root:YfVtyTeYJwVoFEBYNjBi@containers-us-west-193.railway.app:7146/railway
 spring.datasource.username=root
-spring.datasource.password=5tX2IktBROAuFPjc7wvW
+spring.datasource.password=YfVtyTeYJwVoFEBYNjBi
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
