--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # database configs
-spring.datasource.url=jdbc:mysql://root:YfVtyTeYJwVoFEBYNjBi@containers-us-west-193.railway.app:7146/railway
-spring.datasource.username=root
-spring.datasource.password=YfVtyTeYJwVoFEBYNjBi
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:${DATABASE_URL}?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=true
