refactor: update aplication.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # database configs
-spring.datasource.url=jdbc:mysql://root:YfVtyTeYJwVoFEBYNjBi@containers-us-west-193.railway.app:7146/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/educampo?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=YfVtyTeYJwVoFEBYNjBi
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=true
