--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 # logging configs
 logging.config=classpath:logback.xml
 logging.level.org.hibernate.SQL=DEBUG
+
+# Tamanho máximo do arquivo em bytes (5MB)
+spring.servlet.multipart.max-file-size=5MB
+# Tamanho máximo total de todos os arquivos em uma solicitação (5MB)
+spring.servlet.multipart.max-request-size=5MB
