refactor: add application.secrets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-# database configs
-spring.datasource.url=jdbc:mysql://localhost:3306/educampo?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+# Secret configs
+spring.config.import=file:./src/main/resources/application.secrets.yml
+
+# Database configs
+spring.datasource.url={spring.datasource.url}
+spring.datasource.username={spring.datasource.username}
+spring.datasource.password={spring.datasource.password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
@@ -9,11 +12,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-# logging configs
+# Logging configs
 logging.config=classpath:logback.xml
 logging.level.org.hibernate.SQL=DEBUG
 
-# Tamanho máximo do arquivo em bytes (5MB)
+# File upload configs
+# Max file size (5MB)
 spring.servlet.multipart.max-file-size=5MB
-# Tamanho máximo total de todos os arquivos em uma solicitação (5MB)
+# Max request size (5MB)
 spring.servlet.multipart.max-request-size=5MB
