--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,10 @@ spring.config.import=file:./src/main/resources/application.secrets.yml
 spring.datasource.url={spring.datasource.url}
 spring.datasource.username={spring.datasource.username}
 spring.datasource.password={spring.datasource.password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Logging configs
 logging.config=classpath:logback.xml
@@ -21,3 +19,6 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.servlet.multipart.max-file-size=5MB
 # Max request size (5MB)
 spring.servlet.multipart.max-request-size=5MB
+
+# Docs config
+springdoc.swagger-ui.path= /docs
