--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Secret configs
-spring.config.import=file:./src/main/resources/application.secrets.yml
+spring.config.import=optional:file:./src/main/resources/application.secrets.properties
 
 # Database configs
 spring.datasource.url={spring.datasource.url}
@@ -21,4 +21,4 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
 # Docs config
-springdoc.swagger-ui.path= /docs
+springdoc.swagger-ui.path=/docs
