--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ management.endpoints.web.exposure.include=*
 # Docs config
 springdoc.swagger-ui.path=/docs
 springdoc.show-actuator=true
+
+# Api config
+api.security.token.jwt.secret={api.security.token.jwt.secret}
+api.security.provider={api.security.provider}
