feat: send otp to user email and change user password with this otp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,11 @@ springdoc.show-actuator=true
 # Api config
 api.security.token.jwt.secret={api.security.token.jwt.secret}
 api.security.provider={api.security.provider}
+
+# Email config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username={spring.mail.username}
+spring.mail.password={spring.mail.password}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
