--- a/src/main/resources/application.secrets.example.properties
+++ b/src/main/resources/application.secrets.example.properties
@@ -9,3 +9,7 @@ app.url=
 # Api config
 api.security.token.jwt.secret=
 api.security.provider=
+
+# Email config
+spring.mail.username=
+spring.mail.password=
