refactor: alter associates photos endpoints to profile pictures

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.properties.hibernate.generate_statistics=true
 
 # App configs
 app.url={app.url}
-app.upload.dir=src/main/resources/uploads
-app.upload.url=${app.url}/api/v1/associates/photos
+app.upload.image.dir=src/main/resources/uploads/images
+app.image.url=${app.url}/api/v1/images
 
 # Logging configs
 logging.config=classpath:logback.xml
