refactor: add endpoints to associate documents

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,10 @@ spring.jpa.properties.hibernate.generate_statistics=true
 
 # App configs
 app.url={app.url}
-app.upload.image.dir=src/main/resources/uploads/images
-app.image.url=${app.url}/api/v1/images
+app.upload.dir=src/main/resources/uploads
+app.upload.images.dir=src/main/resources/uploads/images
+app.upload.docs.dir=src/main/resources/uploads/documents
+app.file.url=${app.url}/api/v1/files
 
 # Logging configs
 logging.config=classpath:logback.xml
