refactor: application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,15 @@
-# Secret configs
-spring.config.import=optional:file:./src/main/resources/application.secrets.properties
-
 # Database configs
-spring.datasource.url={spring.datasource.url}
-spring.datasource.username={spring.datasource.username}
-spring.datasource.password={spring.datasource.password}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/sindy?useSSL=false&createDatabaseIfNotExist=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.generate_statistics=true
 
 # App configs
-app.url={app.url}
+app.url=${APP_URL:http://localhost:8080}
 app.upload.dir=src/main/resources/uploads
 app.upload.images.dir=src/main/resources/uploads/images
 app.upload.docs.dir=src/main/resources/uploads/documents
@@ -36,13 +33,13 @@ springdoc.swagger-ui.path=/docs
 springdoc.show-actuator=true
 
 # Api config
-api.security.token.jwt.secret={api.security.token.jwt.secret}
-api.security.provider={api.security.provider}
+api.security.token.jwt.secret=${API_SECURITY_TOKEN_JWT_SECRET:secret}
+api.security.provider=${API_SECURITY_PROVIDER:jwt}
 
 # Email config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username={spring.mail.username}
-spring.mail.password={spring.mail.password}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
