add db migration

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,14 @@
 			<artifactId>jasperreports-fonts</artifactId>
 			<version>6.21.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
