--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/sindy?useSSL=false&createDatabaseIfNotExist=true}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,9 +10,9 @@ spring.jpa.properties.hibernate.generate_statistics=true
 
 # App configs
 app.url=${APP_URL:http://localhost:8080}
-app.upload.dir=src/main/resources/uploads
-app.upload.images.dir=src/main/resources/uploads/images
-app.upload.docs.dir=src/main/resources/uploads/documents
+app.upload.dir=${APP_UPLOAD_DIR:src/main/resources/uploads}
+app.upload.images.dir=${APP_UPLOAD_IMAGES_DIR:src/main/resources/uploads/images}
+app.upload.docs.dir=${APP_UPLOAD_DOCS_DIR:src/main/resources/uploads/docs}
 app.file.url=${app.url}/api/v1/files
 
 # Logging configs
@@ -20,10 +20,8 @@ logging.config=classpath:logback.xml
 logging.level.org.hibernate.SQL=DEBUG
 
 # File upload configs
-# Max file size (5MB)
-spring.servlet.multipart.max-file-size=5MB
-# Max request size (5MB)
-spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:5MB}
+spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:5MB}
 
 # Actuator config
 management.endpoints.web.exposure.include=*
@@ -37,9 +35,9 @@ api.security.token.jwt.secret=${API_SECURITY_TOKEN_JWT_SECRET:secret}
 api.security.provider=${API_SECURITY_PROVIDER:jwt}
 
 # Email config
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${SPRING_MAIL_PORT:587}
+spring.mail.username=${SPRING_MAIL_USERNAME:victorkayk77@gmail.com}
+spring.mail.password=${SPRING_MAIL_PASSWORD:cwbh tytw sjnw ydvk}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
