--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ api.security.provider=${API_SECURITY_PROVIDER:jwt}
 # Email config
 spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
 spring.mail.port=${SPRING_MAIL_PORT:587}
-spring.mail.username=${SPRING_MAIL_USERNAME:victorkayk77@gmail.com}
-spring.mail.password=${SPRING_MAIL_PASSWORD:cwbh tytw sjnw ydvk}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
