update email properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,9 +35,9 @@ api.security.token.jwt.secret=${API_SECURITY_TOKEN_JWT_SECRET:secret}
 api.security.provider=${API_SECURITY_PROVIDER:jwt}
 
 # Email config
-spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
-spring.mail.port=${SPRING_MAIL_PORT:587}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.host=${SPRING_MAIL_HOST:localhost}
+spring.mail.port=${SPRING_MAIL_PORT:1025}
+spring.mail.username=${SPRING_MAIL_USERNAME:sindy@email.com}
+spring.mail.password=${SPRING_MAIL_PASSWORD:12345}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
