feat: add cache to all controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database configs
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/sindy?useSSL=false&createDatabaseIfNotExist=true}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/sindy?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=none
@@ -17,7 +17,6 @@ app.file.url=${app.url}/api/v1/files
 
 # Logging configs
 logging.config=classpath:logback.xml
-logging.level.org.hibernate.SQL=DEBUG
 
 # File upload configs
 spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:5MB}
