--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 # Database configs
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/sindy?useSSL=false&createDatabaseIfNotExist=true}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/sindy?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 # App configs
 app.url=${APP_URL:http://localhost:8080}
@@ -17,7 +16,6 @@ app.file.url=${app.url}/api/v1/files
 
 # Logging configs
 logging.config=classpath:logback.xml
-logging.level.org.hibernate.SQL=DEBUG
 
 # File upload configs
 # Max file size (5MB)
@@ -37,9 +35,9 @@ api.security.token.jwt.secret=${API_SECURITY_TOKEN_JWT_SECRET:secret}
 api.security.provider=${API_SECURITY_PROVIDER:jwt}
 
 # Email config
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.host=${SPRING_MAIL_HOST:localhost}
+spring.mail.port=${SPRING_MAIL_PORT:1025}
+spring.mail.username=${SPRING_MAIL_USERNAME:sindy@sindy.com.br}
+spring.mail.password=${SPRING_MAIL_PASSWORD:12345}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
