--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,24 +4,23 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
 
 # App configs
 app.url=${APP_URL:http://localhost:8080}
-app.upload.dir=src/main/resources/uploads
-app.upload.images.dir=src/main/resources/uploads/images
-app.upload.docs.dir=src/main/resources/uploads/documents
+app.upload.dir=${APP_UPLOAD_DIR:src/main/resources/uploads}
+app.upload.images.dir=${APP_UPLOAD_IMAGES_DIR:src/main/resources/uploads/images}
+app.upload.docs.dir=${APP_UPLOAD_DOCS_DIR:src/main/resources/uploads/docs}
 app.file.url=${app.url}/api/v1/files
 
 # Logging configs
 logging.config=classpath:logback.xml
 
 # File upload configs
-# Max file size (5MB)
-spring.servlet.multipart.max-file-size=5MB
-# Max request size (5MB)
-spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:5MB}
+spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:5MB}
 
 # Actuator config
 management.endpoints.web.exposure.include=*
@@ -37,7 +36,7 @@ api.security.provider=${API_SECURITY_PROVIDER:jwt}
 # Email config
 spring.mail.host=${SPRING_MAIL_HOST:localhost}
 spring.mail.port=${SPRING_MAIL_PORT:1025}
-spring.mail.username=${SPRING_MAIL_USERNAME:sindy@sindy.com.br}
+spring.mail.username=${SPRING_MAIL_USERNAME:sindy@email.com}
 spring.mail.password=${SPRING_MAIL_PASSWORD:12345}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
