refactor: improve email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,8 @@ api.security.token.jwt.secret=${API_SECURITY_TOKEN_JWT_SECRET:secret}
 api.security.provider=${API_SECURITY_PROVIDER:jwt}
 
 # Email config
+email.from=${EMAIL_FROM:sindy@email.com}
+email.name=${EMAIL_NAME:Sindy}
 spring.mail.host=${SPRING_MAIL_HOST:localhost}
 spring.mail.port=${SPRING_MAIL_PORT:1025}
 spring.mail.username=${SPRING_MAIL_USERNAME:sindy@email.com}
