feat: set utc as the default off set

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database configs
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/sindy?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/sindy?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&serverTimezone=UTC}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=none
