chore: update  actuator config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,13 @@ logging.config=classpath:logback.xml
 spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:5MB}
 spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:5MB}
 
-# Actuator config
-management.endpoints.web.exposure.include=*
+# Readiness probe config
+management.endpoint.health.group.readiness.include=ping
+management.endpoint.health.group.readiness.show-details=never
+
+# Liveness probe config
+management.endpoint.health.group.liveness.include=ping
+management.endpoint.health.group.liveness.show-details=never
 
 # Docs config
 springdoc.swagger-ui.path=/docs
